@@ -5,7 +5,8 @@ set -e
 SCRIPT=$(readlink -f "$0")
 EXEPATH=$(dirname "$SCRIPT")
 
-$EXEPATH/bin/dma_message_a.elf > ./dma_message_read.log
+cd $EXEPATH/bin
+./dma_message_a.elf > ./dma_message_read.log
 
 retval=$?
 
